shlr/rizin-shell-parser/corpus/comments.txt
=======================
One command and comment
=======================

afl # af is not going to be parsed

---

(statements
  (arged_stmt (cmd_identifier)))


==================
Begin with comment
==================

# this is just a comment
#    ~?
# boh

---

(statements)


====================================
Multiple statements multiple comments
====================================

afl # first comment
p8 10 # second comment
p8 10# third comment

---

(statements
  (arged_stmt (cmd_identifier))
  (arged_stmt (cmd_identifier)
    (args (arg (arg_identifier))))
  (arged_stmt (cmd_identifier)
    (args (arg (arg_identifier)))))

==================================
Comment with # in the middle line
==================================

p8 4 # something

---

(statements
  (arged_stmt (cmd_identifier)
    (args (arg (arg_identifier)))))


============================================
#! identified as comment if not command name
============================================

?e #!this is a comment
?e #this is also a comment
?e # and this too

---

(statements
  (arged_stmt (cmd_identifier))
  (arged_stmt (cmd_identifier))
  (arged_stmt (cmd_identifier)))
