shlr/rizin-shell-parser/corpus/pipes.txt
======================
Pipe to another command
======================

p8 10 | grep 10

---

(statements
  (pipe_stmt
    (arged_stmt (cmd_identifier)
      (args (arg (arg_identifier))))
    (args (arg (arg_identifier)) (arg (arg_identifier)))))

===========
Double pipe
===========

pd 10 | cat | grep mov

---

(statements
  (pipe_stmt
    (pipe_stmt
      (arged_stmt (cmd_identifier)
        (args (arg (arg_identifier))))
      (args (arg (arg_identifier))))
      (args (arg (arg_identifier))
      (arg (arg_identifier)))))

===================================
Pipe to another command with no arg
===================================

f | grep main

---

(statements
  (pipe_stmt
    (arged_stmt (cmd_identifier))
    (args (arg (arg_identifier))
          (arg (arg_identifier)))))

=======================
Pipe to interpreter "."
=======================

p8 10 |.

---

(statements
  (arged_stmt
    (arged_stmt (cmd_identifier)
      (args (arg (arg_identifier))))))
